correction du gap projetcCard

--- a/src/styles/ProjectCard.scss
+++ b/src/styles/ProjectCard.scss
@@ -121,7 +121,7 @@
     }
 
     .project-card {
-        gap: 20px;
+        gap: 30px;
     }
 
     .project-card .dimensionsCard button {
